===============
Version History
===============

.. contents::
    :local:

.. _version-0.95:

0.95
====

.. _v095-news:

News
----
**TODO** Version 0.95 of StarCluster is...

.. _v095-features:

Features
--------
* Option to prefix dns names of created nodes with the cluster tag

.. _v094-fixes:

Bug Fixes
---------
*

.. _version-0.94.2:

0.94.2
======

.. _v0942-news:

News
----
Version 0.94.2 of StarCluster is a bug fix release. See the "Bug Fixes"
sections below for details. In general it's recommended to terminate all
clusters before upgrading to new versions of StarCluster although this is not
always strictly required.

.. _v0942-fixes:

Bug Fixes
---------
* node: fixed regression where the instance's connection object was not being
  reused which was causing issues for folks using regions other than the default
  us-east-1.

.. _version-0.94.1:

0.94.1
======

.. _v0941-news:

News
----
Version 0.94.1 of StarCluster is a bug fix release. See the "Features" and
"Bug Fixes" sections below for details. In general it's recommended to
terminate all clusters before upgrading to new versions of StarCluster
although this is not always strictly required.

.. _v0941-features:

Features
--------
* restart: add ``--reboot-only`` option
* awsutils: force ``delete_on_termation`` on root volume when launching
  instances
* delay using optional imports in starcluster.utils until needed (reduces the
  time it takes to load StarCluster)

.. _v0941-fixes:

Bug Fixes
---------
* cluster: wait for all instance and spot requests to propagate (fixes
  'instance not found' errors and 'missing' spot requests when waiting for
  cluster to come up)
* cluster: terminate any instance that's been pending for more than 15 minutes
  (fixes infinite wait due to a forever pending node)
* s3image: fix block device map issue when host instance is EBS-backed
* awsutils: fix custom block device map for S3 instances/AMIs
* sshnode: fix keypair validation bug