@@ -168,8 +168,10 @@ class ClusterManager(managers.Manager):
 
     def add_node(self, cluster_name, dns_prefix, alias=None, no_create=False,
                  image_id=None, instance_type=None, zone=None,
-                 placement_group=None, spot_bid=None):
-        cl = self.get_cluster(cluster_name)
+                 placement_group=None, spot_bid=None, template=None):
+        if not template:
+            template = self.get_default_cluster_template()
+        cl = self.get_cluster_template(template, cluster_name)
         if dns_prefix:
             cl.dns_prefix = cluster_name
         return cl.add_node(alias=alias, image_id=image_id,
@@ -180,11 +182,13 @@ class ClusterManager(managers.Manager):
     def add_nodes(self, cluster_name, num_nodes, dns_prefix, aliases=None,
                   no_create=False,
                   image_id=None, instance_type=None, zone=None,
-                  placement_group=None, spot_bid=None):
+                  placement_group=None, spot_bid=None, template=None):
         """
         Add one or more nodes to cluster
         """
-        cl = self.get_cluster(cluster_name)
+        if not template:
+            template = self.get_default_cluster_template()
+        cl = self.get_cluster_template(template, cluster_name)
         if dns_prefix:
             cl.dns_prefix = cluster_name
         return cl.add_nodes(num_nodes, aliases=aliases, image_id=image_id,
@@ -192,15 +196,18 @@ class ClusterManager(managers.Manager):
                             placement_group=placement_group, spot_bid=spot_bid,
                             no_create=no_create)
 
-    def remove_node(self, cluster_name, alias, terminate=True):
+    def remove_node(self, cluster_name, alias, terminate=True, template=None,
+                    force=False):
         """
         Remove a single node from a cluster
         """
-        cl = self.get_cluster(cluster_name)
+        if not template:
+            template = self.get_default_cluster_template()
+        cl = self.get_cluster_template(template, cluster_name)
         n = cl.get_node_by_alias(alias)
         if not n:
             raise exception.InstanceDoesNotExist(alias, label='node')
-        cl.remove_node(n, terminate=terminate)
+        cl.remove_node(n, terminate=terminate, force=force)
 
     def restart_cluster(self, cluster_name, reboot_only=False):
         """
@@ -941,21 +948,25 @@ class Cluster(object):
             node = self.get_node_by_alias(alias)
             self.run_plugins(method_name="on_add_node", node=node)
 
-    def remove_node(self, node, terminate=True):
+    def remove_node(self, node, terminate=True, force=False):
         """
         Remove a single node from this cluster
         """
-        return self.remove_nodes([node], terminate=terminate)
+        return self.remove_nodes([node], terminate=terminate, force=force)
 
-    def remove_nodes(self, nodes, terminate=True):
+    def remove_nodes(self, nodes, terminate=True, force=False):
         """
         Remove a list of nodes from this cluster
         """
         for node in nodes:
             if node.is_master():
                 raise exception.InvalidOperation("cannot remove master node")
-            self.run_plugins(method_name="on_remove_node",
-                             node=node, reverse=True)
+            try:
+                self.run_plugins(method_name="on_remove_node",
+                                node=node, reverse=True)
+            except:
+                if not force:
+                    raise
             if not terminate:
                 continue
             node.terminate()
